[tool.poetry]
name = "agents"
version = "0.1.0"
description = ""
authors = ["maitrey <maitrey_dave@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
chainlit="2.1.1"
python-dotenv="1.0.1"
langchain="0.3.17"
langchain-community="0.3.16"
langchain-ollama="0.2.3"
langchain-openai="0.3.3"
langchain-tools="0.1.34"
langgraph="0.2.69"
openai="1.61.0"
ipython="8.32.0"
requests="2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
